--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <img alt="Square Open Source " src="/images/logo.png" />
             </div>
             <div class="profile-name">
-              <h1>Square Open Source</h1>
+              <h1>Brian M. Safiudin </h1>
             </div>
           </header>
           <aside class="profile-summary">
@@ -33,7 +33,8 @@
           <!-- TODO header? -->
 
           <div class="profile-description">
-            <p>As a company built on open source, here are some of the internally-developed libraries we have contributed back to the community.</p>
+            <p>Gatau mau nulis apa,
+              here are some of the internally-developed libraries.</p>
           </div>
 
           <article class="profile-menu" id="menu">
