--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
             </div>
             <div class="profile-name">
               <h1>Brian M. Safiudin </h1>
+              <h1>Open Source Pages </h1>
             </div>
           </header>
           <aside class="profile-summary">
             <div class="summary-location summary-module">
-              <a href="http://github.com/square">github.com/square</a>
+              <a href="www.instagram.com/brianms08">www.instagram.com/brianms08</a>
             </div>
           </aside>
         </section>
@@ -33,8 +34,7 @@
           <!-- TODO header? -->
 
           <div class="profile-description">
-            <p>Gatau mau nulis apa,
-              here are some of the internally-developed libraries.</p>
+            <p>internally-developed libraries.</p>
           </div>
 
           <article class="profile-menu" id="menu">
