--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
             </div>
             <div class="profile-name">
               <h1>Brian M. Safiudin </h1>
-              <h1>Open Source Pages </h1>
             </div>
           </header>
           <aside class="profile-summary">
             <div class="summary-location summary-module">
-              <a href="www.instagram.com/brianms08">www.instagram.com/brianms08</a>
+              <a href="http://www.instagram.com/brianms08">www.instagram.com/brianms08</a>
             </div>
           </aside>
         </section>
