--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Square Open Source</title>
+    <title>Brian Open Source</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 
     <link href="/assets/base.css" media="screen" rel="stylesheet" type="text/css" />
@@ -752,14 +752,7 @@
     <footer class="footer">
       <nav class="footer-navigation">
         <i class="icon-square-footer"></i>
-        <ul class="footer-navigation-list">
-          <li class="footer-navigation-item"><a href="https://squareup.com/developers">Square Developer</a></li>
-          <li class="footer-navigation-item"><a href="https://github.com/cashapp">Cash App</a></li>
-          <li class="footer-navigation-item"><a href="https://squareup.com/security">Security</a></li>
-          <li class="footer-navigation-item"><a href="https://squareup.com/legal/privacy">Privacy</a></li>
-          <li class="footer-navigation-item"><a href="https://squareup.com/help" class="track">Help Center</a></li>
-        </ul>
-        <p class="copyright">© 2009–2020 Square, Inc. All rights reserved.</p>
+        <p class="copyright">© 2014-2021 Brian, Inc. All rights reserved.</p>
       </nav>
     </footer>
 
