--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 
     <link href="/assets/base.css" media="screen" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" href="/assets/public/favicon.ico" />
+    <link rel="shortcut icon" href="/images/logo.png" />
 
     <script src="/assets/modernizr.js" type="text/javascript"></script>
   </head>
